Create Navbar View

--- a/index.html
+++ b/index.html
@@ -10,12 +10,37 @@
 			rel="stylesheet"
 			href="/public/build/css/index.css"
 		/>
+
+		<!-- Font Awesome -->
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+		/>
 		<title>Titanium Printing</title>
 	</head>
 	<body>
 		<header>
-			<!-- Logo -->
-			<h1>Titanium</h1>
+			<nav>
+				<div>
+					<a href="">Titanium</a>
+					<ul>
+						<li><a href="">Cetak custom</a></li>
+						<li><a href="">Inspirasi</a></li>
+						<li><a href="">Tentang kami</a></li>
+						<li><a href="">Agen</a></li>
+					</ul>
+				</div>
+				<button><i class="fa-solid fa-bars fa-fw"></i></button>
+				<!-- Mobile Menu -->
+				<menu>
+					<li><a href="">Cetak custom</a></li>
+					<li><a href="">Inspirasi</a></li>
+					<li><a href="">Tentang kami</a></li>
+					<li><a href="">Agen</a></li>
+
+					<button><i class="fa-solid fa-xmark fa-fw fa-xl"></i></button>
+				</menu>
+			</nav>
 		</header>
 	</body>
 </html>
