Create Hero Section --revision-comming

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</head>
 	<body>
 		<header>
-			<nav>
+			<nav class="container-fluid">
 				<div>
 					<a href="">Titanium</a>
 					<ul>
@@ -33,14 +33,39 @@
 				<button><i class="fa-solid fa-bars fa-fw"></i></button>
 				<!-- Mobile Menu -->
 				<menu>
-					<li><a href="">Cetak custom</a></li>
-					<li><a href="">Inspirasi</a></li>
-					<li><a href="">Tentang kami</a></li>
-					<li><a href="">Agen</a></li>
+					<li>
+						<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Cetak custom</a>
+					</li>
+					<li>
+						<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Inspirasi</a>
+					</li>
+					<li>
+						<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Tentang kami</a>
+					</li>
+					<li>
+						<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Agen</a>
+					</li>
 
 					<button><i class="fa-solid fa-xmark fa-fw fa-xl"></i></button>
 				</menu>
 			</nav>
+
+			<!-- Hero Section -->
+			<section class="container-fluid">
+				<div>
+					<h1>Titanium Printer</h1>
+					<h2>
+						<span>Print</span> <br />
+						Shop
+					</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, harum?</p>
+					<a href="">Order Sekarang <i class="fa-solid fa-arrow-right fa-fw"></i></a>
+				</div>
+				<img
+					src="/public/assets/header-img.webp"
+					alt=""
+				/>
+			</section>
 		</header>
 	</body>
 </html>
