Create Requirement Section --Updating

--- a/index.html
+++ b/index.html
@@ -59,7 +59,15 @@
 						Shop
 					</h2>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, harum?</p>
-					<a href="">Order Sekarang <i class="fa-solid fa-arrow-right fa-fw"></i></a>
+					<a
+						href=""
+						class="animate-pulse"
+					>
+						Order Sekarang
+						<span>
+							<i class="fa-solid fa-arrow-right fa-fw"></i>
+						</span>
+					</a>
 				</div>
 				<img
 					src="/public/assets/header-img.webp"
@@ -67,5 +75,26 @@
 				/>
 			</section>
 		</header>
+		<main>
+			<section>
+				<div class="elements">
+					<div>TITA</div>
+					<div>TITA</div>
+				</div>
+				<div class="container">
+					<h2>Apa kebutuhan cetakmu?</h2>
+					<div>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt molestias odio sit labore expedita!</p>
+						<a href="">Lihat layanan lainnya</a>
+					</div>
+				</div>
+
+				<!-- slider -->
+				<div>
+					<!-- card items	 -->
+					<div></div>
+				</div>
+			</section>
+		</main>
 	</body>
 </html>
