Create Inspiration Section --updating

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
 		/>
+
+		<!-- Owl Carousel -->
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css"
+		/>
 		<title>Titanium Printing</title>
 	</head>
 	<body>
@@ -76,11 +86,14 @@
 			</section>
 		</header>
 		<main>
-			<section>
-				<div class="elements">
+			<section class="requirements">
+				<div class="elements absolute-right">
+					<div>TITA</div>
+					<div>TITA</div>
 					<div>TITA</div>
 					<div>TITA</div>
 				</div>
+
 				<div class="container">
 					<h2>Apa kebutuhan cetakmu?</h2>
 					<div>
@@ -90,11 +103,284 @@
 				</div>
 
 				<!-- slider -->
-				<div>
+				<div class="carousel">
 					<!-- card items	 -->
-					<div></div>
+					<div class="owl-carousel owl-theme">
+						<div class="item">
+							<div class="card">
+								<img
+									src="/public/assets/header-img.webp"
+									alt=""
+									class="card-image"
+								/>
+								<h3 class="card-title">Cetak Goodie bag</h3>
+								<div class="card-body">
+									<div>
+										<span>kategori</span>
+										<span>kategori</span>
+										<span>kategori lainnya</span>
+										<span>kategori</span>
+										<span>kategori</span>
+									</div>
+									<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat semua kemasan</a>
+								</div>
+							</div>
+						</div>
+						<div class="item">
+							<div class="card">
+								<img
+									src="/public/assets/req-1.webp"
+									alt=""
+									class="card-image"
+								/>
+								<h3 class="card-title">Cetak Buku</h3>
+								<div class="card-body">
+									<div>
+										<span>kategori</span>
+										<span>kategori</span>
+										<span>kategori lainnya</span>
+										<span>kategori</span>
+										<span>kategori</span>
+									</div>
+									<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat semua kemasan</a>
+								</div>
+							</div>
+						</div>
+						<div class="item">
+							<div class="card">
+								<img
+									src="/public/assets/req-2.webp"
+									alt=""
+									class="card-image"
+								/>
+								<h3 class="card-title">Cetak Boneka</h3>
+								<div class="card-body">
+									<div>
+										<span>kategori</span>
+										<span>kategori</span>
+										<span>kategori lainnya</span>
+										<span>kategori</span>
+										<span>kategori</span>
+									</div>
+									<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat semua kemasan</a>
+								</div>
+							</div>
+						</div>
+						<div class="item">
+							<div class="card">
+								<img
+									src="/public/assets/req-3.webp"
+									alt=""
+									class="card-image"
+								/>
+								<h3 class="card-title">Cetak Kemasan</h3>
+								<div class="card-body">
+									<div>
+										<span>kategori</span>
+										<span>kategori</span>
+										<span>kategori lainnya</span>
+										<span>kategori</span>
+										<span>kategori</span>
+									</div>
+									<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat semua kemasan</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="inspiration">
+				<div class="elements absolute-left">
+					<div>ANIUM</div>
+					<div>ANIUM</div>
+					<div>ANIUM</div>
+					<div>ANIUM</div>
+				</div>
+
+				<div class="container">
+					<!-- header -->
+					<div class="inspiration-header">
+						<h2>
+							Anda Butuh <br />
+							Inspirasi?
+						</h2>
+						<p>Lihat <a href="">semua layanan</a> kami</p>
+					</div>
+
+					<div class="inspiration-body">
+						<div class="card">
+							<img
+								src="/public/assets/header-img.webp"
+								alt=""
+								class="card-image"
+							/>
+							<h3 class="card-title">Cetak Goodie bag</h3>
+							<div class="card-body">
+								<div>
+									<span>kategori</span>
+									<span>kategori</span>
+									<span>kategori lainnya</span>
+									<span>kategori</span>
+									<span>kategori</span>
+								</div>
+								<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
+							</div>
+						</div>
+						<div class="card">
+							<img
+								src="/public/assets/header-img.webp"
+								alt=""
+								class="card-image"
+							/>
+							<h3 class="card-title">Cetak Goodie bag</h3>
+							<div class="card-body">
+								<div>
+									<span>kategori</span>
+									<span>kategori</span>
+									<span>kategori lainnya</span>
+									<span>kategori</span>
+									<span>kategori</span>
+								</div>
+								<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
+							</div>
+						</div>
+						<div class="card">
+							<img
+								src="/public/assets/header-img.webp"
+								alt=""
+								class="card-image"
+							/>
+							<h3 class="card-title">Cetak Goodie bag</h3>
+							<div class="card-body">
+								<div>
+									<span>kategori</span>
+									<span>kategori</span>
+									<span>kategori lainnya</span>
+									<span>kategori</span>
+									<span>kategori</span>
+								</div>
+								<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
+							</div>
+						</div>
+						<div class="card">
+							<img
+								src="/public/assets/header-img.webp"
+								alt=""
+								class="card-image"
+							/>
+							<h3 class="card-title">Cetak Goodie bag</h3>
+							<div class="card-body">
+								<div>
+									<span>kategori</span>
+									<span>kategori</span>
+									<span>kategori lainnya</span>
+									<span>kategori</span>
+									<span>kategori</span>
+								</div>
+								<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
+							</div>
+						</div>
+						<div class="card">
+							<img
+								src="/public/assets/header-img.webp"
+								alt=""
+								class="card-image"
+							/>
+							<h3 class="card-title">Cetak Goodie bag</h3>
+							<div class="card-body">
+								<div>
+									<span>kategori</span>
+									<span>kategori</span>
+									<span>kategori lainnya</span>
+									<span>kategori</span>
+									<span>kategori</span>
+								</div>
+								<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
+							</div>
+						</div>
+						<div class="card">
+							<img
+								src="/public/assets/header-img.webp"
+								alt=""
+								class="card-image"
+							/>
+							<h3 class="card-title">Cetak Goodie bag</h3>
+							<div class="card-body">
+								<div>
+									<span>kategori</span>
+									<span>kategori</span>
+									<span>kategori lainnya</span>
+									<span>kategori</span>
+									<span>kategori</span>
+								</div>
+								<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
+							</div>
+						</div>
+						<div class="card">
+							<img
+								src="/public/assets/header-img.webp"
+								alt=""
+								class="card-image"
+							/>
+							<h3 class="card-title">Cetak Goodie bag</h3>
+							<div class="card-body">
+								<div>
+									<span>kategori</span>
+									<span>kategori</span>
+									<span>kategori lainnya</span>
+									<span>kategori</span>
+									<span>kategori</span>
+								</div>
+								<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
+							</div>
+						</div>
+						<div class="card">
+							<img
+								src="/public/assets/header-img.webp"
+								alt=""
+								class="card-image"
+							/>
+							<h3 class="card-title">Cetak Goodie bag</h3>
+							<div class="card-body">
+								<div>
+									<span>kategori</span>
+									<span>kategori</span>
+									<span>kategori lainnya</span>
+									<span>kategori</span>
+									<span>kategori</span>
+								</div>
+								<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 		</main>
 	</body>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+	<script>
+		$(".owl-carousel").owlCarousel({
+			loop: true,
+			margin: 5,
+			center: true,
+			nav: false,
+			dots: false,
+			responsive: {
+				0: {
+					items: 1,
+					autoplay: true,
+					autoplayTimeout: 3000,
+					autoplayHoverPause: true,
+				},
+				600: {
+					items: 3,
+				},
+				1000: {
+					items: 4,
+				},
+			},
+		});
+	</script>
 </html>
