--- a/index.html
+++ b/index.html
@@ -356,6 +356,217 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="about-us">
+				<div class="elements absolute-right">
+					<div>ANIUM</div>
+					<div>ANIUM</div>
+					<div>ANIUM</div>
+					<div>ANIUM</div>
+				</div>
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					viewBox="0 0 1440 320"
+				>
+					<path
+						fill="#0c2f4a"
+						fill-opacity="1"
+						d="M0,192L80,165.3C160,139,320,85,480,64C640,43,800,53,960,74.7C1120,96,1280,128,1360,144L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
+					></path>
+				</svg>
+				<div class="about-body">
+					<div class="container">
+						<h2>Apa yang membedakan kami?</h2>
+
+						<!-- card -->
+						<div class="grid">
+							<div class="card">
+								<div class="icon-card">
+									<i
+										class="fa-solid fa-arrow-right fa-rotate-by"
+										style="--fa-rotate-angle: 315deg"
+									></i>
+								</div>
+
+								<div class="card-body">
+									<i class="fa-solid fa-gift"></i>
+
+									<h3 class="card-title">Layanan Cepat</h3>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, cumque?</p>
+								</div>
+							</div>
+
+							<div class="card">
+								<div class="icon-card">
+									<i
+										class="fa-solid fa-arrow-right fa-rotate-by"
+										style="--fa-rotate-angle: 315deg"
+									></i>
+								</div>
+
+								<div class="card-body">
+									<i class="fa-solid fa-gift"></i>
+
+									<h3 class="card-title">Layanan Cepat</h3>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, cumque?</p>
+								</div>
+							</div>
+
+							<div class="card">
+								<div class="icon-card">
+									<i
+										class="fa-solid fa-arrow-right fa-rotate-by"
+										style="--fa-rotate-angle: 315deg"
+									></i>
+								</div>
+
+								<div class="card-body">
+									<i class="fa-solid fa-gift"></i>
+
+									<h3 class="card-title">Layanan Cepat</h3>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, cumque?</p>
+								</div>
+							</div>
+
+							<div class="card">
+								<div class="icon-card">
+									<i
+										class="fa-solid fa-arrow-right fa-rotate-by"
+										style="--fa-rotate-angle: 315deg"
+									></i>
+								</div>
+
+								<div class="card-body">
+									<i class="fa-solid fa-gift"></i>
+
+									<h3 class="card-title">Layanan Cepat</h3>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, cumque?</p>
+								</div>
+							</div>
+						</div>
+
+						<a href="">
+							Order Sekarang
+							<span class="animate-pulse">
+								<i class="fa-solid fa-arrow-right fa-fw"></i>
+							</span>
+						</a>
+					</div>
+				</div>
+			</section>
+
+			<section class="solution">
+				<div>
+					<img
+						src="/public/assets/solutions-image.webp"
+						alt=""
+					/>
+				</div>
+
+				<!-- Main Content -->
+				<div class="solution-content">
+					<h2>
+						Solusi Terbaik <br />
+						Bisnis Anda
+					</h2>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti hic nulla iusto minima cum est autem
+						dolorum? Doloribus ipsum esse, at iusto, repellat unde quo expedita maxime tempore vitae est.
+					</p>
+				</div>
+			</section>
+
+			<svg
+				xmlns="http://www.w3.org/2000/svg"
+				viewBox="0 0 1440 320"
+			>
+				<path
+					fill="#0c2f4a"
+					fill-opacity="1"
+					d="M0,256L80,240C160,224,320,192,480,160C640,128,800,96,960,106.7C1120,117,1280,171,1360,197.3L1440,224L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"
+				></path>
+			</svg>
+			<footer>
+				<div class="head-footer">
+					<div>
+						<h6>info@titanium.co.id</h6>
+						<!-- social media -->
+						<div>
+							<i class="fa-brands fa-instagram"></i>
+							<i class="fa-brands fa-x"></i>
+							<i class="fa-brands fa-facebook"></i>
+						</div>
+					</div>
+					<div>
+						<div>
+							<h6>Produk</h6>
+							<ul>
+								<li><a href=""></a></li>
+								<li><a href=""></a></li>
+								<li><a href=""></a></li>
+								<li><a href=""></a></li>
+								<li><a href=""></a></li>
+								<li><a href=""></a></li>
+							</ul>
+						</div>
+						<div>
+							<h6>Layanan</h6>
+							<ul>
+								<li><a href=""></a></li>
+								<li><a href=""></a></li>
+								<li><a href=""></a></li>
+								<li><a href=""></a></li>
+							</ul>
+						</div>
+						<div>
+							<h6>Info</h6>
+							<ul>
+								<li><a href=""></a></li>
+								<li><a href=""></a></li>
+								<li><a href=""></a></li>
+								<li><a href=""></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="main-footer">
+					<p>Jl. Raya Kalirungkut No.1C, Panjang Jiwo, Kec. Tenggilis,Mejoyo, Surabaya, Jawa Timur, 60299</p>
+
+					<div>
+						<h5>Berlangganan</h5>
+						<input type="text" />
+						<div>
+							<input type="text" />
+							<button>
+								<span><i class="fa-solid fa-arrow-right"></i></span>
+							</button>
+						</div>
+					</div>
+					<div>
+						<h5>Sertifikasi</h5>
+						<div>
+							<div>
+								<i></i>
+							</d>
+							<div>
+								<i></i>
+							</d>
+							<div>
+								<i></i>
+							</d>
+							<div>
+								<i></i>
+							</d>
+							<div>
+								<i></i>
+							</d>
+							<div>
+								<i></i>
+							</d>
+						</div>
+					</div>
+				</div>
+			</footer>
 		</main>
 	</body>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
