Create Footer Section --updating

--- a/index.html
+++ b/index.html
@@ -115,13 +115,7 @@
 								/>
 								<h3 class="card-title">Cetak Goodie bag</h3>
 								<div class="card-body">
-									<div>
-										<span>kategori</span>
-										<span>kategori</span>
-										<span>kategori lainnya</span>
-										<span>kategori</span>
-										<span>kategori</span>
-									</div>
+									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, velit!</p>
 									<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat semua kemasan</a>
 								</div>
 							</div>
@@ -135,18 +129,12 @@
 								/>
 								<h3 class="card-title">Cetak Buku</h3>
 								<div class="card-body">
-									<div>
-										<span>kategori</span>
-										<span>kategori</span>
-										<span>kategori lainnya</span>
-										<span>kategori</span>
-										<span>kategori</span>
-									</div>
 									<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat semua kemasan</a>
 								</div>
 							</div>
 						</div>
 						<div class="item">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, velit!</p>
 							<div class="card">
 								<img
 									src="/public/assets/req-2.webp"
@@ -155,13 +143,6 @@
 								/>
 								<h3 class="card-title">Cetak Boneka</h3>
 								<div class="card-body">
-									<div>
-										<span>kategori</span>
-										<span>kategori</span>
-										<span>kategori lainnya</span>
-										<span>kategori</span>
-										<span>kategori</span>
-									</div>
 									<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat semua kemasan</a>
 								</div>
 							</div>
@@ -173,15 +154,9 @@
 									alt=""
 									class="card-image"
 								/>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, velit!</p>
 								<h3 class="card-title">Cetak Kemasan</h3>
 								<div class="card-body">
-									<div>
-										<span>kategori</span>
-										<span>kategori</span>
-										<span>kategori lainnya</span>
-										<span>kategori</span>
-										<span>kategori</span>
-									</div>
 									<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat semua kemasan</a>
 								</div>
 							</div>
@@ -486,18 +461,18 @@
 					d="M0,256L80,240C160,224,320,192,480,160C640,128,800,96,960,106.7C1120,117,1280,171,1360,197.3L1440,224L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"
 				></path>
 			</svg>
-			<footer>
+			<footer class="container-fluid">
 				<div class="head-footer">
 					<div>
 						<h6>info@titanium.co.id</h6>
 						<!-- social media -->
 						<div>
 							<i class="fa-brands fa-instagram"></i>
-							<i class="fa-brands fa-x"></i>
+							<i class="fa-brands fa-x-twitter"></i>
 							<i class="fa-brands fa-facebook"></i>
 						</div>
 					</div>
-					<div>
+					<div class="list-footer">
 						<div>
 							<h6>Produk</h6>
 							<ul>
@@ -534,36 +509,24 @@
 
 					<div>
 						<h5>Berlangganan</h5>
-						<input type="text" />
-						<div>
-							<input type="text" />
-							<button>
-								<span><i class="fa-solid fa-arrow-right"></i></span>
-							</button>
+						<div class="form-input">
+							<input
+								type="text"
+								placeholder="Nama Anda"
+							/>
+							<div class="input-group">
+								<input
+									type="text"
+									placeholder="Alamat E-mail"
+								/>
+								<button>
+									<i class="fa-solid fa-arrow-right"></i>
+								</button>
+							</div>
 						</div>
 					</div>
-					<div>
+					<div class="cetification">
 						<h5>Sertifikasi</h5>
-						<div>
-							<div>
-								<i></i>
-							</d>
-							<div>
-								<i></i>
-							</d>
-							<div>
-								<i></i>
-							</d>
-							<div>
-								<i></i>
-							</d>
-							<div>
-								<i></i>
-							</d>
-							<div>
-								<i></i>
-							</d>
-						</div>
 					</div>
 				</div>
 			</footer>
