--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 					</a>
 				</div>
 				<img
+					class="img-header"
 					src="/public/assets/header-img.webp"
 					alt=""
 				/>
@@ -108,7 +109,10 @@
 				</div>
 
 				<div class="container">
-					<h2>Apa kebutuhan cetakmu?</h2>
+					<h2>
+						Apa kebutuhan <br />
+						cetakmu?
+					</h2>
 					<div>
 						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt molestias odio sit labore expedita!</p>
 						<a href="">Lihat layanan lainnya</a>
@@ -124,7 +128,6 @@
 								<img
 									src="/public/assets/header-img.webp"
 									alt=""
-									class="card-image"
 								/>
 								<h3 class="card-title">Cetak Goodie bag</h3>
 								<div class="card-body">
@@ -138,7 +141,6 @@
 								<img
 									src="/public/assets/req-1.webp"
 									alt=""
-									class="card-image"
 								/>
 								<h3 class="card-title">Cetak Buku</h3>
 								<div class="card-body">
@@ -152,7 +154,6 @@
 								<img
 									src="/public/assets/req-2.webp"
 									alt=""
-									class="card-image"
 								/>
 								<h3 class="card-title">Cetak Boneka</h3>
 								<div class="card-body">
@@ -166,7 +167,6 @@
 								<img
 									src="/public/assets/req-3.webp"
 									alt=""
-									class="card-image"
 								/>
 								<h3 class="card-title">Cetak Kemasan</h3>
 								<div class="card-body">
@@ -202,7 +202,6 @@
 							<img
 								src="/public/assets/header-img.webp"
 								alt=""
-								class="card-image"
 							/>
 							<h3 class="card-title">Cetak Goodie bag</h3>
 							<div class="card-body">
@@ -220,7 +219,6 @@
 							<img
 								src="/public/assets/header-img.webp"
 								alt=""
-								class="card-image"
 							/>
 							<h3 class="card-title">Cetak Goodie bag</h3>
 							<div class="card-body">
@@ -238,7 +236,6 @@
 							<img
 								src="/public/assets/header-img.webp"
 								alt=""
-								class="card-image"
 							/>
 							<h3 class="card-title">Cetak Goodie bag</h3>
 							<div class="card-body">
@@ -256,7 +253,6 @@
 							<img
 								src="/public/assets/header-img.webp"
 								alt=""
-								class="card-image"
 							/>
 							<h3 class="card-title">Cetak Goodie bag</h3>
 							<div class="card-body">
@@ -274,7 +270,6 @@
 							<img
 								src="/public/assets/header-img.webp"
 								alt=""
-								class="card-image"
 							/>
 							<h3 class="card-title">Cetak Goodie bag</h3>
 							<div class="card-body">
@@ -292,7 +287,6 @@
 							<img
 								src="/public/assets/header-img.webp"
 								alt=""
-								class="card-image"
 							/>
 							<h3 class="card-title">Cetak Goodie bag</h3>
 							<div class="card-body">
@@ -310,7 +304,6 @@
 							<img
 								src="/public/assets/header-img.webp"
 								alt=""
-								class="card-image"
 							/>
 							<h3 class="card-title">Cetak Goodie bag</h3>
 							<div class="card-body">
@@ -328,7 +321,6 @@
 							<img
 								src="/public/assets/header-img.webp"
 								alt=""
-								class="card-image"
 							/>
 							<h3 class="card-title">Cetak Goodie bag</h3>
 							<div class="card-body">
@@ -365,7 +357,10 @@
 				</svg>
 				<div class="about-body">
 					<div class="container">
-						<h2>Apa yang membedakan kami?</h2>
+						<h2>
+							Apa yang <br />
+							membedakan kami?
+						</h2>
 
 						<!-- card -->
 						<div class="grid">
@@ -468,6 +463,7 @@
 			<svg
 				xmlns="http://www.w3.org/2000/svg"
 				viewBox="0 0 1440 320"
+				class="bg-elements-footer"
 			>
 				<path
 					fill="#0c2f4a"
@@ -649,7 +645,7 @@
 					autoplayHoverPause: true,
 				},
 				768: {
-					items: 3,
+					items: 2,
 				},
 				1000: {
 					items: 4,
