Responsive MD view Header

--- a/index.html
+++ b/index.html
@@ -51,17 +51,28 @@
 
 				<!-- Mobile Menu -->
 				<menu>
+					<div class="mobile-menu">
+						<li>
+							<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Cetak custom</a>
+						</li>
+						<li>
+							<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Inspirasi</a>
+						</li>
+						<li>
+							<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Tentang kami</a>
+						</li>
+						<li>
+							<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Agen</a>
+						</li>
+					</div>
 					<li>
-						<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Cetak custom</a>
+						<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Hubungi Kami</a>
 					</li>
 					<li>
-						<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Inspirasi</a>
+						<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Social Media</a>
 					</li>
 					<li>
-						<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Tentang kami</a>
-					</li>
-					<li>
-						<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Agen</a>
+						<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Masuk</a>
 					</li>
 
 					<button id="button-close">
@@ -544,7 +555,6 @@
 				</div>
 				<div class="main-footer">
 					<p>Jl. Raya Kalirungkut No.1C, Panjang Jiwo, Kec. Tenggilis,Mejoyo, Surabaya, Jawa Timur, 60299</p>
-
 					<div>
 						<h5>Berlangganan</h5>
 						<div class="form-input">
