DONE --Go Refactoring

--- a/index.html
+++ b/index.html
@@ -33,12 +33,20 @@
 			<nav class="container-fluid">
 				<div class="navbar">
 					<div>
-						<a href="">Titanium</a>
+						<a href="/">Titanium</a>
 						<ul>
-							<li><a href="">Cetak custom</a></li>
-							<li><a href="">Inspirasi</a></li>
-							<li><a href="">Tentang kami</a></li>
-							<li><a href="">Agen</a></li>
+							<li>
+								<a href="#requirements"> Cetak custom</a>
+							</li>
+							<li>
+								<a href="#inspiration"> Inspirasi</a>
+							</li>
+							<li>
+								<a href="#about-us"> Tentang kami</a>
+							</li>
+							<li>
+								<a href="#solution"> Agen</a>
+							</li>
 						</ul>
 					</div>
 					<button
@@ -56,26 +64,26 @@
 				<menu>
 					<div class="mobile-menu">
 						<li>
-							<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Cetak custom</a>
+							<a href="#requirements"> <i class="fa-solid fa-fw fa-plus"></i> Cetak custom</a>
 						</li>
 						<li>
-							<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Inspirasi</a>
+							<a href="#inspiration"> <i class="fa-solid fa-fw fa-plus"></i> Inspirasi</a>
 						</li>
 						<li>
-							<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Tentang kami</a>
+							<a href="#about-us"> <i class="fa-solid fa-fw fa-plus"></i> Tentang kami</a>
 						</li>
 						<li>
-							<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Agen</a>
+							<a href="#solution"> <i class="fa-solid fa-fw fa-plus"></i> Agen</a>
 						</li>
 					</div>
 					<li>
-						<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Hubungi Kami</a>
+						<a href="https://wa.me/6285608580054"> <i class="fa-solid fa-fw fa-plus"></i> Hubungi Kami</a>
 					</li>
 					<li>
-						<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Social Media</a>
+						<a href="https://wa.me/6285608580054"> <i class="fa-solid fa-fw fa-plus"></i> Social Media</a>
 					</li>
 					<li>
-						<a href=""> <i class="fa-solid fa-fw fa-plus"></i> Masuk</a>
+						<a href="https://wa.me/6285608580054"> <i class="fa-solid fa-fw fa-plus"></i> Masuk</a>
 					</li>
 
 					<button
@@ -99,25 +107,25 @@
 						Shop
 					</h2>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, harum?</p>
-					<a
-						href=""
-						class="animate-pulse"
-					>
+					<a href="https://wa.me/6285608580054">
 						Order Sekarang
-						<span>
+						<span class="animate-pulse">
 							<i class="fa-solid fa-arrow-right fa-fw"></i>
 						</span>
 					</a>
 				</div>
 				<img
-					class="img-header"
+					class="img-header animate-pulse"
 					src="/public/assets/header-img.webp"
 					alt=""
 				/>
 			</section>
 		</header>
 		<main>
-			<section class="requirements">
+			<section
+				class="requirements"
+				id="requirements"
+			>
 				<div class="elements absolute-right">
 					<div>TITA</div>
 					<div>TITA</div>
@@ -132,7 +140,7 @@
 					</h2>
 					<div>
 						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt molestias odio sit labore expedita!</p>
-						<a href="">Lihat layanan lainnya</a>
+						<a href="https://wa.me/6285608580054">Lihat layanan lainnya</a>
 					</div>
 				</div>
 
@@ -149,7 +157,7 @@
 								<h3 class="card-title">Cetak Goodie bag</h3>
 								<div class="card-body">
 									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, velit!</p>
-									<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat semua kemasan</a>
+									<a href="https://wa.me/6285608580054"><i class="fa-solid fa-arrow-down"></i>Lihat semua kemasan</a>
 								</div>
 							</div>
 						</div>
@@ -162,7 +170,7 @@
 								<h3 class="card-title">Cetak Buku</h3>
 								<div class="card-body">
 									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, velit!</p>
-									<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat semua kemasan</a>
+									<a href="https://wa.me/6285608580054"><i class="fa-solid fa-arrow-down"></i>Lihat semua kemasan</a>
 								</div>
 							</div>
 						</div>
@@ -175,7 +183,7 @@
 								<h3 class="card-title">Cetak Boneka</h3>
 								<div class="card-body">
 									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, velit!</p>
-									<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat semua kemasan</a>
+									<a href="https://wa.me/6285608580054"><i class="fa-solid fa-arrow-down"></i>Lihat semua kemasan</a>
 								</div>
 							</div>
 						</div>
@@ -188,7 +196,7 @@
 								<h3 class="card-title">Cetak Kemasan</h3>
 								<div class="card-body">
 									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, velit!</p>
-									<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat semua kemasan</a>
+									<a href="https://wa.me/6285608580054"><i class="fa-solid fa-arrow-down"></i>Lihat semua kemasan</a>
 								</div>
 							</div>
 						</div>
@@ -196,7 +204,10 @@
 				</div>
 			</section>
 
-			<section class="inspiration">
+			<section
+				class="inspiration"
+				id="inspiration"
+			>
 				<div class="elements absolute-left">
 					<div>ANIUM</div>
 					<div>ANIUM</div>
@@ -211,151 +222,154 @@
 							Anda Butuh <br />
 							Inspirasi?
 						</h2>
-						<p>Lihat <a href="">semua layanan</a> kami</p>
+						<p>Lihat <a href="https://wa.me/6285608580054">semua layanan</a> kami</p>
 					</div>
 
 					<div class="inspiration-body">
 						<div class="card">
 							<img
-								src="/public/assets/header-img.webp"
+								src="/public/assets/inspiration-1.jpg"
 								alt=""
 							/>
-							<h3 class="card-title">Cetak Goodie bag</h3>
+							<h3 class="card-title">Portfolio Cetakan</h3>
 							<div class="card-body">
-								<div>
+								<div class="card-category">
 									<span>kategori</span>
 									<span>kategori</span>
 									<span>kategori lainnya</span>
 									<span>kategori</span>
 									<span>kategori</span>
 								</div>
-								<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
 							</div>
 						</div>
 						<div class="card">
 							<img
-								src="/public/assets/header-img.webp"
+								src="/public/assets/inspiration-2.jpg"
 								alt=""
 							/>
-							<h3 class="card-title">Cetak Goodie bag</h3>
+							<h3 class="card-title">Portfolio Cetakan</h3>
 							<div class="card-body">
-								<div>
+								<div class="card-category">
 									<span>kategori</span>
 									<span>kategori</span>
 									<span>kategori lainnya</span>
 									<span>kategori</span>
 									<span>kategori</span>
 								</div>
-								<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
 							</div>
 						</div>
 						<div class="card">
 							<img
-								src="/public/assets/header-img.webp"
+								src="/public/assets/inspiration-3.jpg"
 								alt=""
 							/>
-							<h3 class="card-title">Cetak Goodie bag</h3>
+							<h3 class="card-title">Portfolio Cetakan</h3>
 							<div class="card-body">
-								<div>
+								<div class="card-category">
 									<span>kategori</span>
 									<span>kategori</span>
 									<span>kategori lainnya</span>
 									<span>kategori</span>
 									<span>kategori</span>
 								</div>
-								<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
 							</div>
 						</div>
 						<div class="card">
 							<img
-								src="/public/assets/header-img.webp"
+								src="/public/assets/inspiration-4.jpg"
 								alt=""
 							/>
-							<h3 class="card-title">Cetak Goodie bag</h3>
+							<h3 class="card-title">Portfolio Cetakan</h3>
 							<div class="card-body">
-								<div>
+								<div class="card-category">
 									<span>kategori</span>
 									<span>kategori</span>
 									<span>kategori lainnya</span>
 									<span>kategori</span>
 									<span>kategori</span>
 								</div>
-								<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
 							</div>
 						</div>
 						<div class="card">
 							<img
-								src="/public/assets/header-img.webp"
+								src="/public/assets/inspiration-5.jpg"
 								alt=""
 							/>
-							<h3 class="card-title">Cetak Goodie bag</h3>
+							<h3 class="card-title">Portfolio Cetakan</h3>
 							<div class="card-body">
-								<div>
+								<div class="card-category">
 									<span>kategori</span>
 									<span>kategori</span>
 									<span>kategori lainnya</span>
 									<span>kategori</span>
 									<span>kategori</span>
 								</div>
-								<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
 							</div>
 						</div>
 						<div class="card">
 							<img
-								src="/public/assets/header-img.webp"
+								src="/public/assets/inspiration-6.jpg"
 								alt=""
 							/>
-							<h3 class="card-title">Cetak Goodie bag</h3>
+							<h3 class="card-title">Portfolio Cetakan</h3>
 							<div class="card-body">
-								<div>
+								<div class="card-category">
 									<span>kategori</span>
 									<span>kategori</span>
 									<span>kategori lainnya</span>
 									<span>kategori</span>
 									<span>kategori</span>
 								</div>
-								<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
 							</div>
 						</div>
 						<div class="card">
 							<img
-								src="/public/assets/header-img.webp"
+								src="/public/assets/inspiration-7.jpg"
 								alt=""
 							/>
-							<h3 class="card-title">Cetak Goodie bag</h3>
+							<h3 class="card-title">Portfolio Cetakan</h3>
 							<div class="card-body">
-								<div>
+								<div class="card-category">
 									<span>kategori</span>
 									<span>kategori</span>
 									<span>kategori lainnya</span>
 									<span>kategori</span>
 									<span>kategori</span>
 								</div>
-								<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
 							</div>
 						</div>
 						<div class="card">
 							<img
-								src="/public/assets/header-img.webp"
+								src="/public/assets/inspiration-8.jpg"
 								alt=""
 							/>
-							<h3 class="card-title">Cetak Goodie bag</h3>
+							<h3 class="card-title">Portfolio Cetakan</h3>
 							<div class="card-body">
-								<div>
+								<div class="card-category">
 									<span>kategori</span>
 									<span>kategori</span>
 									<span>kategori lainnya</span>
 									<span>kategori</span>
 									<span>kategori</span>
 								</div>
-								<a href=""><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-arrow-down"></i>Lihat produk sejenis</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
 
-			<section class="about-us">
+			<section
+				class="about-us"
+				id="about-us"
+			>
 				<div class="elements absolute-right">
 					<div>ANIUM</div>
 					<div>ANIUM</div>
@@ -446,7 +460,7 @@
 							</div>
 						</div>
 
-						<a href="">
+						<a href="https://wa.me/6285608580054">
 							Order Sekarang
 							<span class="animate-pulse">
 								<i class="fa-solid fa-arrow-right fa-fw"></i>
@@ -456,7 +470,10 @@
 				</div>
 			</section>
 
-			<section class="solution">
+			<section
+				class="solution"
+				id="solution"
+			>
 				<div>
 					<img
 						src="/public/assets/solutions-image.webp"
@@ -505,22 +522,22 @@
 						<h6>Produk</h6>
 						<ul>
 							<li>
-								<a href=""><i class="fa-solid fa-fw fa-arrow-right"></i> Home</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-fw fa-arrow-right"></i> Home</a>
 							</li>
 							<li>
-								<a href=""><i class="fa-solid fa-fw fa-arrow-right"></i> Cerita Kami</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-fw fa-arrow-right"></i> Cerita Kami</a>
 							</li>
 							<li>
-								<a href=""><i class="fa-solid fa-fw fa-arrow-right"></i> Layanan Lain</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-fw fa-arrow-right"></i> Layanan Lain</a>
 							</li>
 							<li>
-								<a href=""><i class="fa-solid fa-fw fa-arrow-right"></i> Hubungi Kami</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-fw fa-arrow-right"></i> Hubungi Kami</a>
 							</li>
 							<li>
-								<a href=""><i class="fa-solid fa-fw fa-arrow-right"></i> Packing Khusus</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-fw fa-arrow-right"></i> Packing Khusus</a>
 							</li>
 							<li>
-								<a href=""><i class="fa-solid fa-fw fa-arrow-right"></i> Kerjasama</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-fw fa-arrow-right"></i> Kerjasama</a>
 							</li>
 						</ul>
 					</div>
@@ -528,16 +545,16 @@
 						<h6>Layanan</h6>
 						<ul>
 							<li>
-								<a href=""><i class="fa-solid fa-fw fa-arrow-right"></i> Cetak Brosur</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-fw fa-arrow-right"></i> Cetak Brosur</a>
 							</li>
 							<li>
-								<a href=""><i class="fa-solid fa-fw fa-arrow-right"></i> Cetak DTF</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-fw fa-arrow-right"></i> Cetak DTF</a>
 							</li>
 							<li>
-								<a href=""><i class="fa-solid fa-fw fa-arrow-right"></i> Cetak Banner</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-fw fa-arrow-right"></i> Cetak Banner</a>
 							</li>
 							<li>
-								<a href=""><i class="fa-solid fa-fw fa-arrow-right"></i> Cetak Leaflet</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-fw fa-arrow-right"></i> Cetak Leaflet</a>
 							</li>
 						</ul>
 					</div>
@@ -545,16 +562,16 @@
 						<h6>Info</h6>
 						<ul>
 							<li>
-								<a href=""><i class="fa-solid fa-fw fa-arrow-right"></i> S&K</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-fw fa-arrow-right"></i> S&K</a>
 							</li>
 							<li>
-								<a href=""><i class="fa-solid fa-fw fa-arrow-right"></i> Pengembalian</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-fw fa-arrow-right"></i> Pengembalian</a>
 							</li>
 							<li>
-								<a href=""><i class="fa-solid fa-fw fa-arrow-right"></i> FAQ</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-fw fa-arrow-right"></i> FAQ</a>
 							</li>
 							<li>
-								<a href=""><i class="fa-solid fa-fw fa-arrow-right"></i> Eksplorasi</a>
+								<a href="https://wa.me/6285608580054"><i class="fa-solid fa-fw fa-arrow-right"></i> Eksplorasi</a>
 							</li>
 						</ul>
 					</div>
@@ -615,7 +632,7 @@
 			</div>
 			<div class="bot-footer">
 				<div>
-					<a href="">Privacy Police</a>
+					<a href="https://wa.me/6285608580054">Privacy Police</a>
 					<p>&copy; / 2024 / Titanium Printing / All rights reserved</p>
 				</div>
 
@@ -626,7 +643,7 @@
 						alt=""
 						style="width: 0.65rem; margin-left: 2px"
 					/>
-					<a href="">Crooud Agency</a>
+					<a href="https://wa.me/6285608580054">Crooud Agency</a>
 				</p>
 			</div>
 		</footer>
