--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 	<head>
 		<meta charset="UTF-8" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
+		<title>Titanium Printing</title>
 		<link
 			rel="stylesheet"
-			href="/public/build/css/index.css"
+			href="/public/build/css/index.min.css"
 		/>
-
-		<!-- Font Awesome -->
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
 		/>
-
-		<!-- Owl Carousel -->
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -26,7 +23,6 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css"
 		/>
-		<title>Titanium Printing</title>
 	</head>
 	<body>
 		<header>
@@ -99,7 +95,7 @@
 			</nav>
 
 			<!-- Hero Section -->
-			<section class="container-fluid">
+			<section class="hero container-fluid">
 				<div>
 					<h1>Titanium Printer</h1>
 					<h2>
@@ -121,10 +117,11 @@
 				/>
 			</section>
 		</header>
+
 		<main>
 			<section
-				class="requirements"
 				id="requirements"
+				class="requirements"
 			>
 				<div class="elements absolute-right">
 					<div>TITA</div>
@@ -205,8 +202,8 @@
 			</section>
 
 			<section
-				class="inspiration"
 				id="inspiration"
+				class="inspiration"
 			>
 				<div class="elements absolute-left">
 					<div>ANIUM</div>
@@ -367,8 +364,8 @@
 			</section>
 
 			<section
-				class="about-us"
 				id="about-us"
+				class="about-us"
 			>
 				<div class="elements absolute-right">
 					<div>ANIUM</div>
@@ -471,8 +468,8 @@
 			</section>
 
 			<section
-				class="solution"
 				id="solution"
+				class="solution"
 			>
 				<div>
 					<img
@@ -506,6 +503,7 @@
 				></path>
 			</svg>
 		</main>
+
 		<footer class="container-fluid">
 			<div class="head-footer">
 				<div>
@@ -647,49 +645,9 @@
 				</p>
 			</div>
 		</footer>
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+		<script src="/public/js/main.js"></script>
 	</body>
-	<script>
-		const buttonOpen = document.getElementById("button-open");
-		const buttonClose = document.querySelector("#button-close");
-		const menu = document.querySelector("menu");
-
-		buttonOpen.addEventListener("click", () => {
-			menu.classList.add("show");
-		});
-
-		buttonClose.addEventListener("click", () => {
-			menu.classList.remove("show");
-		});
-	</script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-	<script>
-		$(".owl-carousel").owlCarousel({
-			loop: true,
-			margin: 5,
-			center: true,
-			nav: false,
-			dots: false,
-			responsive: {
-				0: {
-					items: 1,
-					autoplay: true,
-					autoplayTimeout: 3000,
-					autoplayHoverPause: true,
-				},
-				768: {
-					items: 2,
-				},
-				1024: {
-					items: 3,
-				},
-				1280: {
-					items: 4,
-				},
-				1536: {
-					items: 4,
-				},
-			},
-		});
-	</script>
 </html>
