--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 		<title>Titanium Printing</title>
 		<link
 			rel="stylesheet"
-			href="/public/build/css/index.min.css"
+			href="build/css/index.min.css"
 		/>
 		<link
 			rel="stylesheet"
@@ -112,7 +112,7 @@
 				</div>
 				<img
 					class="img-header animate-pulse"
-					src="/public/assets/header-img.webp"
+					src="assets/header-img.webp"
 					alt=""
 				/>
 			</section>
@@ -148,7 +148,7 @@
 						<div class="item">
 							<div class="card">
 								<img
-									src="/public/assets/header-img.webp"
+									src="assets/header-img.webp"
 									alt=""
 								/>
 								<h3 class="card-title">Cetak Goodie bag</h3>
@@ -161,7 +161,7 @@
 						<div class="item">
 							<div class="card">
 								<img
-									src="/public/assets/req-1.webp"
+									src="assets/req-1.webp"
 									alt=""
 								/>
 								<h3 class="card-title">Cetak Buku</h3>
@@ -174,7 +174,7 @@
 						<div class="item">
 							<div class="card">
 								<img
-									src="/public/assets/req-2.webp"
+									src="assets/req-2.webp"
 									alt=""
 								/>
 								<h3 class="card-title">Cetak Boneka</h3>
@@ -187,7 +187,7 @@
 						<div class="item">
 							<div class="card">
 								<img
-									src="/public/assets/req-3.webp"
+									src="assets/req-3.webp"
 									alt=""
 								/>
 								<h3 class="card-title">Cetak Kemasan</h3>
@@ -225,7 +225,7 @@
 					<div class="inspiration-body">
 						<div class="card">
 							<img
-								src="/public/assets/inspiration-1.jpg"
+								src="assets/inspiration-1.jpg"
 								alt=""
 							/>
 							<h3 class="card-title">Portfolio Cetakan</h3>
@@ -242,7 +242,7 @@
 						</div>
 						<div class="card">
 							<img
-								src="/public/assets/inspiration-2.jpg"
+								src="assets/inspiration-2.jpg"
 								alt=""
 							/>
 							<h3 class="card-title">Portfolio Cetakan</h3>
@@ -259,7 +259,7 @@
 						</div>
 						<div class="card">
 							<img
-								src="/public/assets/inspiration-3.jpg"
+								src="assets/inspiration-3.jpg"
 								alt=""
 							/>
 							<h3 class="card-title">Portfolio Cetakan</h3>
@@ -276,7 +276,7 @@
 						</div>
 						<div class="card">
 							<img
-								src="/public/assets/inspiration-4.jpg"
+								src="assets/inspiration-4.jpg"
 								alt=""
 							/>
 							<h3 class="card-title">Portfolio Cetakan</h3>
@@ -293,7 +293,7 @@
 						</div>
 						<div class="card">
 							<img
-								src="/public/assets/inspiration-5.jpg"
+								src="assets/inspiration-5.jpg"
 								alt=""
 							/>
 							<h3 class="card-title">Portfolio Cetakan</h3>
@@ -310,7 +310,7 @@
 						</div>
 						<div class="card">
 							<img
-								src="/public/assets/inspiration-6.jpg"
+								src="assets/inspiration-6.jpg"
 								alt=""
 							/>
 							<h3 class="card-title">Portfolio Cetakan</h3>
@@ -327,7 +327,7 @@
 						</div>
 						<div class="card">
 							<img
-								src="/public/assets/inspiration-7.jpg"
+								src="assets/inspiration-7.jpg"
 								alt=""
 							/>
 							<h3 class="card-title">Portfolio Cetakan</h3>
@@ -344,7 +344,7 @@
 						</div>
 						<div class="card">
 							<img
-								src="/public/assets/inspiration-8.jpg"
+								src="assets/inspiration-8.jpg"
 								alt=""
 							/>
 							<h3 class="card-title">Portfolio Cetakan</h3>
@@ -473,7 +473,7 @@
 			>
 				<div>
 					<img
-						src="/public/assets/solutions-image.webp"
+						src="assets/solutions-image.webp"
 						alt=""
 					/>
 				</div>
@@ -648,6 +648,6 @@
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-		<script src="/public/js/main.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
